# myqa-intelligence-service

./: .gitignore  Dockerfile  README.md  pyproject.toml
src/: config.py  custom_types.py  logger.py  main.py  settings.json
src/api/: application.py  server_application.py
src/api/controllers/: answers.py  chunks.py  knowledge_bases.py
src/api/controllers/utils/: chunks.py  language.py
src/services/: embeddings_calculator.py  embeddings_store.py  llm_provider.py  llm_stream_handler.py
