[tool.poetry]
name = "myqa-intelligence-service"
version = "0.1.0"
description = "This service provides myqa intelligence layer."
authors = ["João Macedo <j.macedo.it@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
unstructured = {extras = ["local-inference"], version = "^0.6.5"}
openai = "^0.27.2"
chromadb = "^0.3.16"
pymilvus = "^2.2.4"
langchain = "^0.0.170"
tiktoken = "^0.4.0"
Flask-SocketIO = "^5.3.4"
dynaconf = "^3.1.12"
Flask = {extras = ["async"], version = "^2.3.2"}
gevent-websocket = "^0.10.1"
tabulate = "^0.9.0"


[tool.poetry.group.dev.dependencies]
autopep8 = "^2.0.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
